--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/magarenzo/projectCarousel.js#readme",
   "dependencies": {
+    "github-scraper": "^7.0.1",
     "require": "^2.4.20"
   }
 }
